--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,10 +22,5 @@ steps:
     goals: 'package'
 - task: CopyFiles@2
   inputs:
-    contents: '**/*.war'
-    targetFolder: '$(build.artifactStagingDirectory)'
-
-- task: PublishBuildArtifacts@1
-  inputs:
-    artifactName: 'war'
-    pathToPublish: '$(build.artifactStagingDirectory)'    
+    sourceFolder: $(Build.SourcesDirectory)
+    targetFolder: $(Build.ArtifactStagingDirectory)  
