--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spring-boot-web-spring-security</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <name>Spring Boot Web Spring Security</name>
     <description>Spring Boot Web Spring Security Example</description>
     <url>https://www.mkyong.com</url>
@@ -17,6 +17,8 @@
     </parent>
 
     <properties>
+    	<docker.image.prefix>kuberegistry123.azurecr.io</docker.image.prefix>
+   		<jib-maven-plugin.version>2.3.0</jib-maven-plugin.version>
         <java.version>1.8</java.version>
     </properties>
 
@@ -60,6 +62,20 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+			  <artifactId>jib-maven-plugin</artifactId>
+			  <groupId>com.google.cloud.tools</groupId>
+			  <version>${jib-maven-plugin.version}</version>
+			  <configuration>
+			     <from>
+			         <image>mcr.microsoft.com/java/jdk:8-zulu-alpine</image>
+			     </from>
+			     <to>
+			         <image>${docker.image.prefix}/${project.artifactId}</image>
+			     </to>
+			  </configuration>
+			</plugin>
+			
         </plugins>
     </build>
 </project>
